force-app/main/default/objects/Competitive_Info__c/Competitive_Info__c.object-meta.xml
<CustomObject>
    <label>Competitive Info</label>
    <nameField>
        <displayFormat>C- {000000}</displayFormat>
        <label>Competitive Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>