force-app/main/default/objects/Competitive_Info__c/fields/Competitor_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitive Info (Competitor Manufacturer)</relationshipLabel>
    <relationshipName>Competitive_Info2</relationshipName>
    <type>Lookup</type>
</CustomField>