force-app/main/default/objects/Competitive_Info__c/fields/Competitve_Sku__c.field-meta.xml
<CustomField>
    <fullName>Competitve_Sku__c</fullName>
    <label>Competitve Sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>