force-app/main/default/objects/Competitive_Info__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>End User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitive Info</relationshipLabel>
    <relationshipName>Competitive_Info</relationshipName>
    <type>Lookup</type>
</CustomField>