force-app/main/default/objects/Competitive_Info__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitive Info (Reseller)</relationshipLabel>
    <relationshipName>Competitive_Info1</relationshipName>
    <type>Lookup</type>
</CustomField>